2009-05-31  Armin Burgmeier  <armin@openismus.com>

	* configure.ac: Define GTKMM_STATIC_LIB when a static gtkmm library is
	built.

	* gtk/gtkmmconfig.h.in: Define GTKMM_DLL on Windows when building a
	DLL, instead of using GLIBMM_DLL, so that it's possible to build
	glibmm as a static library and gtkmm as a DLL, or vice versa. Bug
	#583657.

2009-05-18  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/iconview.hg: get_model(): Use refreturn to correct the ref-counting.
	Bug #583037 (Santanu Sinha).

2009-05-05  Murray Cumming  <murrayc@murrayc.com>

	Gtk::SelectionData::get_uris() documentation fix.
	
	* gtk/src/gtk_docs_override.xml: Add an override for 
	gtk_selection_data_get_uris() because the C documentation mentions freeing 
	strings.

2009-05-05  Johannes Schmid <jschmid@openismus.com>

	* gtk/gtkmm/box.ccg:
	* tests/boxhelper/main.c
	* tests/boxhelper/Makefile.am
	* tests/Makefile.am
	* configure.ac:
	Fixed 466853 – Gtk::Box_Helpers::BoxList::insert() has wrong 
	return value
	and added testcase

2009-04-28  Johannes Schmid <jschmid@openismus.com>

  * gtk/gtkmm/stock.h:
  * gtk/gtkmm/stockitem.h:
  * gtk/src/iconset.hg:
  506885 – Stock ID stuff needs documentation
  
  Document as much as there is information available from the Gtk+ documentation

2009-04-27  Johannes Schmid <jschmid@openismus.com>

  * gtk/src/statusicon.ccg:
  Reference the returned statusicon because the RefPtr becomes invalid
  otherwise (#575268)
  
2009-04-18  Daniel Elstner  <danielk@openismus.com>

	* docs/reference/images/stock: Add these stock images to the repository for
	now to unbreak the build since we can no longer use svn:external.  It's
	probably worth looking for a better way to do this in the future.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* gtk/src/notebook.ccg (PageList::PageList cctor): Oops. Fix silly
	mistake that broke the build.

2009-03-26  Daniel Elstner  <danielk@openismus.com>

	* configure.ac: Rename from configure.in.