@@ -34,7 +34,7 @@
 !define PRODUCT_VERSION_MICRO "@GTKMM_MICRO_VERSION@"
 !endif
 !ifndef PRODUCT_VERSION_INSTALLER
-!define PRODUCT_VERSION_INSTALLER "2"
+!define PRODUCT_VERSION_INSTALLER "3"
 !endif
 
 !ifdef PRODUCT_API_VERSION
@@ -1265,6 +1265,48 @@ continue:
   Delete "$INSTDIR\${PRODUCT_NAME}.url"
 
 !ifndef RUNTIME_ONLY
+  ; redist
+  Delete $INSTDIR\redist\zlib1.dll
+  Delete $INSTDIR\redist\intl.dll
+  Delete $INSTDIR\redist\iconv.dll
+  Delete $INSTDIR\redist\charset.dll
+  Delete $INSTDIR\redist\libxml2.dll
+
+  Delete $INSTDIR\redist\jpeg62.dll
+  Delete $INSTDIR\redist\libpng12-0.dll
+  Delete $INSTDIR\redist\libtiff3.dll
+  Delete $INSTDIR\redist\libglib-2.0-0.dll
+  Delete $INSTDIR\redist\libgobject-2.0-0.dll
+  Delete $INSTDIR\redist\libgmodule-2.0-0.dll
+  Delete $INSTDIR\redist\libgthread-2.0-0.dll
+  Delete $INSTDIR\redist\libgio-2.0-0.dll
+  Delete $INSTDIR\redist\libcairo-2.dll
+  Delete $INSTDIR\redist\libatk-1.0-0.dll
+  Delete $INSTDIR\redist\libpango-1.0-0.dll
+  Delete $INSTDIR\redist\libpangocairo-1.0-0.dll
+  Delete $INSTDIR\redist\libpangoft2-1.0-0.dll
+  Delete $INSTDIR\redist\libpangowin32-1.0-0.dll
+  Delete $INSTDIR\redist\libgailutil-18.dll
+  Delete $INSTDIR\redist\libgdk-win32-2.0-0.dll
+  Delete $INSTDIR\redist\libgdk_pixbuf-2.0-0.dll
+  Delete $INSTDIR\redist\libgtk-win32-2.0-0.dll
+  Delete $INSTDIR\redist\libglade-2.0-0.dll
+  Delete $INSTDIR\redist\gspawn-win32-helper.exe
+  Delete $INSTDIR\redist\gspawn-win32-helper-console.exe
+
+  Delete $INSTDIR\redist\libsigc-2.0-0.dll
+  Delete $INSTDIR\redist\libcairomm-1.0-1.dll
+  Delete $INSTDIR\redist\libglibmm-2.4-1.dll
+  Delete $INSTDIR\redist\libgiomm-2.4-1.dll
+  Delete $INSTDIR\redist\libatkmm-1.6-1.dll
+  Delete $INSTDIR\redist\libpangomm-1.4-1.dll
+  Delete $INSTDIR\redist\libgdkmm-2.4-1.dll
+  Delete $INSTDIR\redist\libgtkmm-2.4-1.dll
+  Delete $INSTDIR\redist\libglademm-2.4-1.dll
+  Delete $INSTDIR\redist\libxml++-2.6-2.dll
+  Delete $INSTDIR\redist\README.txt
+  RMDir $INSTDIR\redist
+
   ; bin
 
   Delete $INSTDIR\bin\iconv.exe
@@ -1456,12 +1498,14 @@ continue:
 
   RMDir /r $INSTDIR\share\doc\libiconv
 
-  RMDir /r $INSTDIR\share\doc\glib-dev-2.18.1
-  RMDir /r $INSTDIR\share\doc\pango-dev-1.22.0
-  RMDir /r $INSTDIR\share\doc\gtk+-dev-2.14.3
+  RMDir /r $INSTDIR\share\doc\glib-dev-2.20.0
+  RMDir /r $INSTDIR\share\doc\pango-dev-1.24.0
+  RMDir /r $INSTDIR\share\doc\gtk+-dev-2.16.0
 
   RMDir /r $INSTDIR\share\xml\libglade
   RMDir $INSTDIR\share\xml
+
+  RMDir /r $INSTDIR\share\glib-2.0
 
   Delete $INSTDIR\share\aclocal\glib-2.0.m4
   Delete $INSTDIR\share\aclocal\glib-gettext.m4
@@ -1585,9 +1629,9 @@ continue:
   Delete $INSTDIR\bin\libgiomm-*.dll
   Delete $INSTDIR\bin\libglibmm_generate_extra_defs-*.dll
   Delete $INSTDIR\bin\libatkmm-*.dll
+  Delete $INSTDIR\bin\libpangomm-*.dll
   Delete $INSTDIR\bin\libgdkmm-*.dll
   Delete $INSTDIR\bin\libgtkmm-*.dll
-  Delete $INSTDIR\bin\libpangomm-*.dll
   Delete $INSTDIR\bin\libglademm-*.dll
   Delete $INSTDIR\bin\libxml++-*.dll
  
@@ -1597,13 +1641,11 @@ continue:
   Delete $INSTDIR\bin\glibmm-*.dll
   Delete $INSTDIR\bin\giomm-*.dll
   Delete $INSTDIR\bin\atkmm-*.dll
+  Delete $INSTDIR\bin\pangomm-*.dll
   Delete $INSTDIR\bin\gdkmm-*.dll
   Delete $INSTDIR\bin\gtkmm-*.dll
-  Delete $INSTDIR\bin\pangomm-*.dll
   Delete $INSTDIR\bin\glademm-*.dll
-;  Delete $INSTDIR\bin\libglademm-*.dll.lnk
   Delete $INSTDIR\bin\xml++-*.dll
-;  Delete $INSTDIR\bin\libxml++-*.dll.lnk
   
   Delete $INSTDIR\bin\sigc-*.pdb
   Delete $INSTDIR\bin\cairomm-*.pdb
@@ -1614,17 +1656,15 @@ continue:
   Delete $INSTDIR\bin\gtkmm-*.pdb
   Delete $INSTDIR\bin\pangomm-*.pdb
   Delete $INSTDIR\bin\glademm-*.pdb
-;  Delete $INSTDIR\bin\libglademm-*.pdb.lnk
   Delete $INSTDIR\bin\xml++-*.pdb
-;  Delete $INSTDIR\bin\libxml++-*.pdb.lnk
   
   RMDir $INSTDIR\bin
   
   ; share (non-development files)
-  RMDir /r $INSTDIR\share\doc\glib-2.18.1
-  RMDir /r $INSTDIR\share\doc\cairo_1.7.6-1_win32
-  RMDir /r $INSTDIR\share\doc\pango-1.22.0
-  RMDir /r $INSTDIR\share\doc\gtk+-2.14.3
+  RMDir /r $INSTDIR\share\doc\glib-2.20.0
+  RMDir /r $INSTDIR\share\doc\cairo_1.8.6-1_win32
+  RMDir /r $INSTDIR\share\doc\pango-1.24.0
+  RMDir /r $INSTDIR\share\doc\gtk+-2.16.0
   RMDir $INSTDIR\share\doc
 
   RMdir /r $INSTDIR\share\locale
