@@ -1,5 +1,10 @@
 2009-05-31  Armin Burgmeier  <armin@openismus.com>
 
+	* win32_installer/gtkmm-installer.nsi.in: Make sure to uninstall all
+	installed files, a few files were missing (Tao Wang).
+
+2009-05-31  Armin Burgmeier  <armin@openismus.com>
+
 	* configure.ac: Define GTKMM_STATIC_LIB when a static gtkmm library is
 	built.
 
